[project]
name = "framefuse"
description = "ComfyUI node for stitching a still frame onto the start or end of an IMAGE video batch with optional audio silence alignment."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/headline-design/comfyui-framefuse"
Documentation = "https://github.com/headline-design/comfyui-framefuse#readme"
"Bug Tracker" = "https://github.com/headline-design/comfyui-framefuse/issues"

[tool.comfy]
PublisherId = "ussaaron"
DisplayName = "FrameFuse"
