[project]
name = "framefuse"
description = "ComfyUI nodes for stitching a still frame onto the start or end of an IMAGE video batch and trimming extra tail frames with optional audio sync alignment."
version = "1.0.1"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://registry.comfy.org/publishers/ussaaron/nodes/framefuse"
Repository = "https://github.com/headline-design/comfyui-framefuse"
Documentation = "https://github.com/headline-design/comfyui-framefuse#readme"
"Bug Tracker" = "https://github.com/headline-design/comfyui-framefuse/issues"

[tool.comfy]
PublisherId = "ussaaron"
DisplayName = "FrameFuse"
